# rules_oci

./: MODULE.bazel
e2e/convert_docker_tarball/: BUILD.bazel  convert.bash
examples/attest/: BUILD.bazel
examples/attest_external/: BUILD.bazel  test.bash
examples/push/: BUILD.bazel  test.bash
examples/sign/: BUILD.bazel  test.bash
examples/sign_external/: BUILD.bazel  test.bash
oci/: toolchain.bzl
oci/private/: image.bzl  image.sh  image_index.bzl  image_index.sh  push.sh  tarball.bzl  tarball.sh
oci/private/registry/: crane_launcher.sh  zot_launcher.sh
