load("//cosign:defs.bzl", "cosign_sign")

exports_files(["BUILD.template"])

cosign_sign(
    name = "sign",
    image = "@empty_image",
    repository = "test",
)

sh_test(
    name = "test",
    srcs = ["test.bash"],
    args = [
        "$(COREUTILS_BIN)",
        "$(JQ_BIN)",
        "$(SED_BIN)",
        "$(CRANE_BIN)",
        "$(COSIGN_BIN)",
        "$(LAUNCHER_WRAPPER)",
        "$(location :sign)",
        "$(location @empty_image)",
    ],
    data = [
        ":sign",
        "@empty_image",
        "@coreutils_toolchains//:resolved_toolchain",
        "@jq_toolchains//:resolved_toolchain",
        "@sed_toolchains//:resolved_toolchain",
        "@oci_cosign_toolchains//:current_toolchain",
        "@oci_crane_registry_toolchains//:current_toolchain",
        "@oci_crane_toolchains//:current_toolchain",
    ],
    toolchains = [
        "@oci_crane_registry_toolchains//:current_toolchain",
        "@oci_cosign_toolchains//:current_toolchain",
        "@oci_crane_toolchains//:current_toolchain",
        "@coreutils_toolchains//:resolved_toolchain",
        "@jq_toolchains//:resolved_toolchain",
        "@sed_toolchains//:resolved_toolchain",
    ],
)
